@@ -1,0 +1,141 @@
+.\" -*- mode: troff; coding: utf-8 -*-
+.\" Automatically generated by Pod::Man 5.0102 (Pod::Simple 3.45)
+.\"
+.\" Standard preamble:
+.\" ========================================================================
+.de Sp \" Vertical space (when we can't use .PP)
+.if t .sp .5v
+.if n .sp
+..
+.de Vb \" Begin verbatim text
+.ft CW
+.nf
+.ne \\$1
+..
+.de Ve \" End verbatim text
+.ft R
+.fi
+..
+.\" \*(C` and \*(C' are quotes in nroff, nothing in troff, for use with C<>.
+.ie n \{\
+.    ds C` ""
+.    ds C' ""
+'br\}
+.el\{\
+.    ds C`
+.    ds C'
+'br\}
+.\"
+.\" Escape single quotes in literal strings from groff's Unicode transform.
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
+.\"
+.\" If the F register is >0, we'll generate index entries on stderr for
+.\" titles (.TH), headers (.SH), subsections (.SS), items (.Ip), and index
+.\" entries marked with X<> in POD.  Of course, you'll have to process the
+.\" output yourself in some meaningful fashion.
+.\"
+.\" Avoid warning from groff about undefined register 'F'.
+.de IX
+..
+.nr rF 0
+.if \n(.g .if rF .nr rF 1
+.if (\n(rF:(\n(.g==0)) \{\
+.    if \nF \{\
+.        de IX
+.        tm Index:\\$1\t\\n%\t"\\$2"
+..
+.        if !\nF==2 \{\
+.            nr % 0
+.            nr F 2
+.        \}
+.    \}
+.\}
+.rr rF
+.\" ========================================================================
+.\"
+.IX Title "SBO::Lib 3"
+.TH SBO::Lib 3 "Setting Orange, Chaos 30, 3191 YOLD" "" "sbotools 3.4.1"
+.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
+.\" way too many mistakes in technical documents.
+.if n .ad l
+.nh
+.SH NAME
+SBO::Lib \- Library for working with SlackBuilds.org.
+.SH SYNOPSIS
+.IX Header "SYNOPSIS"
+.Vb 1
+\&  use SBO::Lib qw/ :all /;
+.Ve
+.SH DESCRIPTION
+.IX Header "DESCRIPTION"
+SBO::Lib is the entry point for all the related modules, and simply re-exports all
+exports. Each module is documented in its own man page.
+.SS SBO::Lib::Build
+.IX Subsection "SBO::Lib::Build"
+\&\f(CW\*(C`Build.pm\*(C'\fR has routines for building Slackware packages from SlackBuilds.org. It covers
+the build process from the point the queue is set through post-build cleaning.
+.SS SBO::Lib::Download
+.IX Subsection "SBO::Lib::Download"
+\&\f(CW\*(C`Download.pm\*(C'\fR downloads, verifies and symlinks any needed source files before building the
+queue begins.
+.SS SBO::Lib::Info
+.IX Subsection "SBO::Lib::Info"
+\&\f(CW\*(C`Info.pm\*(C'\fR sanitizes and parses \f(CW\*(C`info\*(C'\fR files; the information returned is used in version
+comparions, dependency calculation and the source downloading process.
+.SS SBO::Lib::Pkgs
+.IX Subsection "SBO::Lib::Pkgs"
+\&\f(CW\*(C`Pkgs.pm\*(C'\fR interacts with the Slackware package database to provide, tag and version information
+for all installed packages.
+.SS SBO::Lib::Readme
+.IX Subsection "SBO::Lib::Readme"
+\&\f(CW\*(C`Readme.pm\*(C'\fR parses and displays \f(CW\*(C`README\*(C'\fR files. It detects options and commands for
+adding users and groups. Pre-installation user prompts and build option recall are
+handled here.
+.SS SBO::Lib::Repo
+.IX Subsection "SBO::Lib::Repo"
+\&\f(CW\*(C`Repo.pm\*(C'\fR is responsible for fetching, updating and linting the local copy of the SlackBuilds.org
+repository, as well as GPG verification and key addition.
+.SS SBO::Lib::Tree
+.IX Subsection "SBO::Lib::Tree"
+\&\f(CW\*(C`Tree.pm\*(C'\fR determines the location of scripts in the repository and local overrides directory.
+.SS SBO::Lib::Util
+.IX Subsection "SBO::Lib::Util"
+\&\f(CW\*(C`Util.pm\*(C'\fR contains utiliy functions for \f(CW\*(C`SBO::Lib\*(C'\fR and the sbotools. Configuration-related
+shared variables and the shared exit codes can be found here.
+.SH "EXIT CODES"
+.IX Header "EXIT CODES"
+The sbotools share the following exit codes:
+.PP
+.Vb 10
+\&  _ERR_USAGE         1   usage errors
+\&  _ERR_SCRIPT        2   script or module bug
+\&  _ERR_BUILD         3   errors when executing a SlackBuild
+\&  _ERR_MD5SUM        4   download verification failure
+\&  _ERR_DOWNLOAD      5   download failure
+\&  _ERR_OPENFH        6   failure to open file handles
+\&  _ERR_NOINFO        7   missing download information
+\&  _ERR_F_SETD        8   fd\-related temporary file failure
+\&  _ERR_NOMULTILIB    9   lacking multilib capabilities when needed
+\&  _ERR_CONVERTPKG    10  convertpkg\-compat32 failure
+\&  _ERR_NOCONVERTPKG  11  lacking convertpkg\-compat32 when needed
+\&  _ERR_INST_SIGNAL   12  the script was interrupted while building
+\&  _ERR_CIRCULAR      13  attempted to calculate a circular dependency
+.Ve
+.SH "SEE ALSO"
+.IX Header "SEE ALSO"
+\&\fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Readme\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBSBO::Lib::Util\fR\|(3)
+.SH AUTHORS
+.IX Header "AUTHORS"
+SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
+contributions from Luke Williams <xocel@iquidus.org> and Andreas
+Guldstrand <andreas.guldstrand@gmail.com>.
+.PP
+SBO::Lib is maintained by K. Eugene Carlson <kvngncrlsn@gmail.com>.
+.SH LICENSE
+.IX Header "LICENSE"
+The sbotools are licensed under the MIT License.
+.PP
+Copyright (C) 2012\-2017, Jacob Pipkin, Luke Williams, Andreas Guldstrand.
+.PP
+Copyright (C) 2024\-2025, K. Eugene Carlson.
